build_error.log
    Checking opencrust-agents v0.1.0 (D:\Git Projects\opencrust\crates\opencrust-agents)
error[E0382]: borrow of moved value: `content`
   --> crates\opencrust-agents\src\ollama.rs:337:20
    |
307 |         let content = ollama_res
    |             ------- move occurs because `content` has type `Vec<ContentBlock>`, which does not implement the `Copy` trait
...
329 |             content,
    |             ------- value moved here
...
337 |                 if content.iter().any(|b| matches!(b, ContentBlock::ToolUse { .. })) {
    |                    ^^^^^^^ value borrowed here after move
    |
    = note: borrow occurs due to deref coercion to `[ContentBlock]`

For more information about this error, try `rustc --explain E0382`.
error: could not compile `opencrust-agents` (lib) due to 1 previous error
